fix(tun): normalize interface name to utun on macOS
macOS requires TUN interface names to match utun[0-9]*. The default
name 'VPNClient' was rejected by wireguard-go's CreateTUN on Darwin.

- Add normalizeInterfaceName() per platform (Darwin forces utun*, others pass-through)
- Add defaultInterfaceName() per platform in config (utun on macOS, VPNClient elsewhere)
- Use platform-aware default in DefaultConfig() and settings UI
- Document macOS naming requirement in config.example.yaml

Fixes: 'Interface name must be utun[0-9]*' error on macOS

--- a/configs/config.example.yaml
+++ b/configs/config.example.yaml
@@ -100,6 +100,9 @@ dns:
 # ============================================================================
 # NETWORK INTERFACE
 # ============================================================================
+# On macOS, the name MUST be "utun" or "utun<N>" (e.g. utun5).
+# Using "utun" lets the OS auto-assign the next available number.
+# On Windows/Linux, any name is accepted (default: "VPNClient").
 interface:
   name: "VPNClient"
   mtu: 1420
